2006-01-16  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
	Supress linker errors about Windows GUI executables.

	* configure.in: shape up.
	* interface/Makefile.am: don't link tty and dumb objs to GUI executables.
	* interface/w32g_i.c: borand C volatile link problem fix.
	* interface/w32g_ut2.c.orig: small fix.
	* timidity/controls.c
	* timidity/timidity.c
	* timidity/wrdt: GUI executables don't use dumb or tty controls.
	* timidity/reverb.c
	* timidity/reverb.c: don't define public variables in .h file.

2006-01-15  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* configure.in: MSVC compile fix
	* windrv/timiditydrv.cpp: use _beginthreadex not CreateThread
	* doc/ja_JP.eucJP/README.w32: typo
	* script/Makefile.am: add script/wpp386_w.sh
	* interface/ncurs_c.c: 

2006-01-12  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	* doc/C/README.w32
	* doc/ja_JP.eucJP/README.w32: add wine wrc.exe discription
	* interface/Makefile.am: ad rc.exe japanese language option -l0x11

2006-01-12  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>
	* configure.in: Add mkstemp check
	* doc/C/README.w32
	* doc/ja_JP.eucJP/README.w32: About timiditydrv compilation
	* windrv/Makefile.am: Change to use midl.exe
	* windrv/dlldata.c
	* windrv/timiditydrv.h
	* windrv/timiditydrv_i.c
	* windrv/timiditydrv_p.c: Rmoved because will be ganerated by midl.exe.

2006-01-08  Keishi Suenaga <s_keishi@mutt.freemai.ne.jp>

	Changes for OpenWatcom 1.4
	* configure configure.in 
	* utils/tmdy_getopt.h
	* doc/C/README.w32
	* doc/ja_JP.eucJP/README.w32
	* script/wcc386_w.sh
   	* timidity/au_a.c 
	* timidity/wave_a.c 
	* utils/support.h

2005-12-19  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: Add server version.

2005-12-03  Stas Sergeev <stsp@aknet.ru>

	* interface/server_c.c: Do not ignore SIGPIPE 

2005-11-26  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>

	* timidity/timidity.c (parse_opt_i): fix for possible null-pointer
	  dereference when interface plugin is not found.
